--- a/product/templates/product/base.html
+++ b/product/templates/product/base.html
@@ -366,13 +366,13 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="{% url 'my_items' %}" class="nav-link">
           <i class="fas fa-boxes nav-icon"></i>
           <span>My Items</span>
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="{% url 'borrowed_items' %}" class="nav-link">
           <i class="fas fa-handshake nav-icon"></i>
           <span>Borrowed Items</span>
         </a>
@@ -384,7 +384,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="{% url 'profile' %}" class="nav-link">
           <i class="fas fa-user-circle nav-icon"></i>
           <span>Profile</span>
         </a>
