--- a/product/templates/product/borrowed_items.html
+++ b/product/templates/product/borrowed_items.html
@@ -1,6 +1,6 @@
 {% extends "product/base.html" %}
 {% block content %}
-<div class="min-h-screen bg-gradient-to-br from-gray-900 via-indigo-900 to-gray-900 p-6">
+<div class="min-h-screen bg-black from-gray-900 via-indigo-900 to-gray-900 p-6">
   <div class="max-w-7xl mx-auto">
     <!-- Header Section -->
     <div class="mb-8">
