--- a/product/templates/product/profile.html
+++ b/product/templates/product/profile.html
@@ -1,6 +1,6 @@
-{% extends "productr/base.html" %}
+{% extends "product/base.html" %}
 {% block content %}
-<div class="min-h-screen bg-gradient-to-b from-gray-900 via-purple-900 to-black p-6">
+<div class="min-h-screen bg-black to-black p-6">
   <div class="max-w-4xl mx-auto">
 
     <!-- Profile Header -->
