--- a/product/templates/product/add_item.html
+++ b/product/templates/product/add_item.html
@@ -30,6 +30,18 @@
             </svg>
             Item Name *
           </label>
+
+
+<div>
+        <label class="block text-gray-300 mb-2">Upload File / Image</label>
+        <input type="file" name="file"
+          class="w-full text-gray-300 file:mr-4 file:py-2 file:px-4
+                 file:rounded-lg file:border-0
+                 file:text-sm file:font-semibold
+                 file:bg-indigo-600 file:text-white
+                 hover:file:bg-indigo-700">
+      </div>
+
           <div class="relative">
             <input 
               type="text" 
