--- a/product/templates/product/login.html
+++ b/product/templates/product/login.html
@@ -224,9 +224,36 @@
             <div class="form-group">
                 <input type="text" name="username" placeholder="Username" required>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
                 <input type="password" name="password" placeholder="Password" required>
-            </div>
+            </div>-->
+
+
+<div class="form-group" style="position: relative;">
+  <input 
+    type="password" 
+    name="password" 
+    id="mainPassword" 
+    placeholder="Password" 
+    required 
+    style="padding-right: 40px;"
+  >
+  <button 
+    type="button" 
+    onclick="togglePassword('mainPassword')" 
+    style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); border: none; background: none; cursor: pointer;"
+  >
+    👁️
+  </button>
+</div>
+
+<script>
+function togglePassword(fieldId) {
+  const input = document.getElementById(fieldId);
+  input.type = input.type === "password" ? "text" : "password";
+}
+</script>
+
             <button type="submit" class="submit-btn">Sign In</button>
         </form>
         
