--- a/product/templates/product/signup.html
+++ b/product/templates/product/signup.html
@@ -307,9 +307,40 @@
             <div class="form-group">
                 <input type="text" name="username" placeholder="Username" required>
             </div>
-            <div class="form-group">
+           <!-- <div class="form-group">
                 <input type="email" name="email" placeholder="Email Address" required>
-            </div>
+            </div>-->
+
+
+
+<div class="form-group" style="position: relative;">
+  <input 
+    type="email" 
+    name="email" 
+    id="email" 
+    placeholder="Email Address" 
+    required 
+    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+    oninput="validateEmail()"
+    style="width: 100%;"
+  >
+  <div class="email-error" id="emailError" style="color: red; font-size: 0.9em; margin-top: 5px;"></div>
+</div>
+
+<script>
+function validateEmail() {
+  const emailInput = document.getElementById("email");
+  const emailError = document.getElementById("emailError");
+  
+  if (emailInput.validity.valid) {
+    emailError.textContent = "";
+  } else {
+    emailError.textContent = "Please enter a valid email address.";
+  }
+}
+</script>
+
+
             <div class="form-group">
               
 <div style="position: relative; display: inline-block;">
