--- a/product/templates/product/base.html
+++ b/product/templates/product/base.html
@@ -381,7 +381,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="{% url 'payment_list' %}" class="nav-link">
           <i class="fas fa-credit-card nav-icon"></i>
           <span>Payment History</span>
         </a>
