--- a/product/templates/product/dashboard.html
+++ b/product/templates/product/dashboard.html
@@ -112,7 +112,7 @@
               <i class="fas fa-search"></i>
             </div>
             <p class="empty-text">No items borrowed yet</p>
-            <button class="btn-primary-outline">Browse Games</button>
+            <button class="btn-primary-outline"><a href="{% url 'landing' %}">Browse Games</a></button>
           </div>
         {% endif %}
       </div>
