fix:time,price fields

--- a/product/templates/product/item_detail.html
+++ b/product/templates/product/item_detail.html
@@ -206,6 +206,60 @@
                 <p class="info-value">{{ item.description }}</p>
             </div>
         </div>
+
+
+<div class="info-card">
+    <div class="info-icon">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="white">
+            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10
+                     10-4.48 10-10S17.52 2 12 2zm0 18
+                     c-4.41 0-8-3.59-8-8s3.59-8 8-8
+                     8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"/>
+        </svg>
+    </div>
+    <div class="info-content">
+        <div class="info-label">Select Time & Price</div>
+        <div class="time-price-range">
+            <label>
+                From:
+                <input type="time" class="time-from" />
+            </label>
+            <label>
+                To:
+                <input type="time" class="time-to" />
+            </label>
+            <label>
+                Price:
+                <input type="number" class="price-input" placeholder="Enter price" step="0.0001" />
+            </label>
+        </div>
+    </div>
+</div>
+
+
+<!--<div class="info-card">
+    <div class="info-icon">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="white">
+            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10
+                     10-4.48 10-10S17.52 2 12 2zm0 18
+                     c-4.41 0-8-3.59-8-8s3.59-8 8-8
+                     8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"/>
+        </svg>
+    </div>
+    <div class="info-content">
+        <div class="info-label">Select Time Range</div>
+        <div class="time-range">
+            <label>
+                From:
+                <input type="time" class="time-from" />
+            </label>
+            <label>
+                To:
+                <input type="time" class="time-to" />
+            </label>
+        </div>
+    </div>
+</div>-->
         
         <div class="info-card price-card">
             <div class="info-icon">
