fix:time,price fields

--- a/product/templates/product/landing.html
+++ b/product/templates/product/landing.html
@@ -649,7 +649,7 @@
     <div class="info-content">
         <div class="info-label">Price & Time</div>
         <p class="text-gray-600 text-sm mt-2 line-clamp-2">
-            Price: {{ item.price }} <br>
+            Price: KSH {{ item.price }} <br>
             From: {{ item.time_from }} &nbsp; To: {{ item.time_to }}
         </p>
     </div>
