--- a/product/templates/product/landing.html
+++ b/product/templates/product/landing.html
@@ -649,16 +649,13 @@
     <div class="info-content">
         <div class="info-label">Price & Time</div>
         <p class="text-gray-600 text-sm mt-2 line-clamp-2">
-            Price: KSH {{ item.price }} <br>
+           price: KSH: {{ item.price }}
             From: {{ item.time_from }} &nbsp; To: {{ item.time_to }}
         </p>
     </div>
 </div>
 
-<!--
-<p class="text-gray-600 text-sm mt-2 line-clamp-2">
-            {{ item.price }}   {{}}
-          </p>-->
+
           <!-- Actions -->
 
 
