fix: lease< rent

--- a/product/templates/product/item_detail.html
+++ b/product/templates/product/item_detail.html
@@ -274,7 +274,7 @@
             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                 <path d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 1H9C7.9 1 7 1.9 7 3V7C7 8.1 7.9 9 9 9H21ZM12 13.5C10.1 13.5 8.5 11.9 8.5 10S10.1 6.5 12 6.5S15.5 8.1 15.5 10S13.9 13.5 12 13.5ZM12 22C12 22 3 17 3 10.5C3 6.4 6.4 3 10.5 3H13.5C17.6 3 21 6.4 21 10.5C21 17 12 22 12 22Z"/>
             </svg>
-            <span class="btn-text">Lease Now</span>
+            <span class="btn-text">Rent Now</span>
         </button>
     </div>
 </div>
