fix: lease< rent

--- a/product/templates/product/item_detail.html
+++ b/product/templates/product/item_detail.html
@@ -293,7 +293,7 @@ document.getElementById('payBtn').addEventListener('click', function () {
     
     var handler = PaystackPop.setup({
         key: '{{ PAYSTACK_PUBLIC_KEY }}', // your public key from settings
-        email: 'ikinyapeter83@gmail.com',
+        email: 'Oyungeterry@gmail.com',
         amount: 10 * 100,
         currency: 'KES',
         callback: function(response){
